wip: routes songs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <h1>Mongoose Flights</h1>
+    <h1>Songs project</h1>
     <nav>
         <a href="/songs/new">New Song</a>
         <a href="/songs">All Songs</a>
