--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -22,7 +22,11 @@
                 </tbody>
             </table>
         </section>
-
+        <section>
+            <!-- add later after the review schema is implemented-->
+            <!-- <h2>Reviews</h2>
+            <form action="/songs/<%= song._id %> -->
+        </section>  
         <%- include('../partials/footer') %>  
 </body>
 </html>
