made changed to user controller, h tags

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,29 +15,29 @@ h1 {
     text-align: center;
 }
 
-/* h2 {
+ h2 {
     color: maroon;
     font-size: 4vmin;
     font-family: sans-serif;
     background-color: lightgray;
     text-align: center;
-} */
+} 
 
-/* h3 {
+ h3 {
     color: maroon;
     font-size: 4vmin;
     font-family: sans-serif;
     background-color: lightgray;
     text-align: center;
-} */
+} 
 
-/* h4 {
+ h4 {
     color: maroon;
     font-size: 8vmin;
     font-family: sans-serif;
     background-color: lightgray;
     text-align: center;
-} */
+} 
 
 body {
     background-color: rgb(63, 213, 158);
