--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,3 +70,15 @@ footer {
     padding-top: 5vmin;
     padding-bottom: 3vmin;
 }
+
+.login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 34px;
+  }
+  
+  .login img {
+    height: 30px;
+  }
+  
