--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,7 @@ h1 {
     font-family: sans-serif;
     background-color: lightgray;
     text-align: center;
+    /* padding: 4vmin; */
 } 
 
  h3 {
@@ -67,6 +68,6 @@ footer {
     display: flex;
     padding-left: 50vmin;
     padding-right: 50vmin;
-    padding-top: 5vmin;
-    padding-bottom: 3vmin;
+    padding-top: 35vmin;
+    padding-bottom: 5vmin;
 }
