--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,16 @@
 header {
     color: black;
-    font-size: 8vmin;
+    font-size: 5vmin;
     font-family: cursive;
+    letter-spacing: 1vmin;
+    background-color: aqua;
+    text-align: center;
+}
+
+head {
+    
+    /* font-size: 2vmin;
+    font-family: cursive; */
     letter-spacing: 1vmin;
     background-color: aqua;
     text-align: center;
@@ -9,34 +18,33 @@ header {
 
 h1 {
     color: black;
-    font-size: 5vmin;
+    font-size: 8vmin;
     font-family: sans-serif;
-    background-color: rgb(103, 38, 38);
+    background-color: maroon;
     text-align: center;
 }
 
  h2 {
-    color: maroon;
-    font-size: 4vmin;
+    color: pink
+    /* font-size: 2vmin; */
     font-family: sans-serif;
     background-color: lightgray;
     text-align: center;
-    /* padding: 4vmin; */
 } 
 
  h3 {
-    color: maroon;
-    font-size: 4vmin;
+    color: yellow;
+    font-size: 3vmin;
     font-family: sans-serif;
     background-color: lightgray;
     text-align: center;
 } 
 
  h4 {
-    color: maroon;
-    font-size: 8vmin;
+    /* color: orange; */
+    font-size: 6vmin;
     font-family: sans-serif;
-    background-color: lightgray;
+    /* background-color: lightgray; */
     text-align: center;
 } 
 
@@ -45,7 +53,17 @@ body {
     font-size: 2vmin;
     justify-content: center;
     align-items: center;
+    /* padding-left: 20vmin;
+    padding-right: 30vmin;
+    padding-top: 15vmin;
+    padding-bottom: 5vmin; */
+}
 
+#song-artist-genre {
+    padding-left: 20vmin;
+    padding-right: 20vmin;
+    padding-top: 15vmin;
+    padding-bottom: 5vmin;
 }
 
  button {
@@ -66,17 +84,20 @@ footer {
     font-size: 2.5vmin;
     text-align: center;
     display: flex;
-    padding-left: 50vmin;
-    padding-right: 50vmin;
-    padding-top: 35vmin;
-    padding-bottom: 5vmin;
+    padding-left: 48vmin;
+    padding-right: 40vmin;
+    padding-top: 30vmin;
+    padding-bottom: 2vmin;
 }
 
 .login {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 34px;
+    height: 50px;
+    background-color: yellow;
+    padding-top: 4vmin;
+    padding-bottom: 5vmin;
   }
   
   .login img {
