--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -12,7 +12,7 @@
                         <th>Genre</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="song-artist-genre">
                     <% songs.forEach(s => { %>
                     <tr>
                         <td>
