--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,10 +108,20 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: dodgerblue;
   }
   
   .comment-user img {
     border-radius: 50%;
-    height: 40px;
+    height: 30px;
+  }
+
+  nav {
+    background-color: rgb(63, 213, 158);
+    font-size: 2vmin;
+    justify-content: center;
+    align-items: center;
+    padding-top: 4vmin;
+    padding-bottom: 5vmin;
   }
   
