--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,14 +71,8 @@ h1 {
 } 
 
 
-#song-artist-genre {
-    padding-left: 20vmin;
-    padding-right: 20vmin;
-    padding-top: 15vmin;
-    padding-bottom: 5vmin;
-}
 
- button {
+button {
     margin-top: 3vmin;
     font-size: 2vmin;
     border: 0.06vmin solid black;
@@ -92,25 +86,15 @@ button:hover {
     color: white;
 }
 
-footer {
-    font-size: 2.5vmin;
-    text-align: center;
-    display: flex;
-    padding-left: 50vmin;
-    padding-right: 50vmin;
-    padding-top: 35vmin;
-    padding-bottom: 5vmin;
-}
 
 .login {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
-
+    
 }
-  
-  
+
 .login img {
     height: 30px;
 }
@@ -124,14 +108,30 @@ footer {
 .comment-user img {
     border-radius: 50%;
     height: 30px;
-  }
+}
 
-  nav {
-    background-color: rgb(63, 213, 158);
-    font-size: 2vmin;
-    justify-content: center;
-    align-items: center;
-    padding-top: 4vmin;
+.block-style-container{
+    position: fixed;
+    
+}
+
+#song-artist-genre {
+    padding-left: 50vmin;
+    padding-right: 20vmin;
+    padding-top: 15vmin;
     padding-bottom: 5vmin;
-  }
-  
+}
+
+.footer {
+    position: fixed;
+    font-size: 2vmin;
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: black;
+    /* padding-left: 50vmin;
+    padding-right: 50vmin;
+    padding-top: 35vmin;
+    padding-bottom: 5vmin; */
+}
