--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<footer>
+<div class = "footer">
     <p>Copyright &copy; All Rights Reserved <%= new Date().getFullYear() %> Mongoose Songs</p>
-</footer>
+</div>
