--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -6,7 +6,7 @@
             <div class="block-style-container">
                     <table>
                         <thead>
-                            <div class ="topics">
+                            <div class ="index-topics">
                                 <tr>
                                     <th>Song</th>
                                     <th>Artist</th>
