--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -45,7 +45,7 @@
                             </form>
                             <form id="editComment" action="/songs/<%= s._id %>/comments?_method=PUT" method="POST">
                                 <%=s._id%>>
-                                <textarea name="title" required><%= s.title %></textarea>
+                                <textarea name="title" required><%= c.title %></textarea>
                                     <button type="submit">edit</button>
                                 <% } %>
                     </td>
