--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/head') %>
     <body>
         <%- include('../partials/header') %>
-            <div class="block-style-container">
+            <div class="index-container">
                     <table>
                         <thead>
                             <div class ="index-topics">
@@ -14,7 +14,7 @@
                                 </tr>
                             </div>
                         </thead>
-                        <tbody id="song-artist-genre">
+                        <tbody id="index-options">
                             <% songs.forEach(s => { %>
                             <tr>
                                 <td>
