--- a/views/songs/new.ejs
+++ b/views/songs/new.ejs
@@ -3,6 +3,7 @@
     <%- include('../partials/head') %>
     <%- include('../partials/header') %>
 <h2>Project 2</h2>
+    <div class="new-song"></div>
     <form action = "/songs" method="POST">
         <label> Song:
             <input type="string" name="song">
@@ -21,6 +22,7 @@
         </label>
         <button type="submit">Add Song</button>
     </form>
+</div>
 <body>
     <%- include('../partials/footer') %>
 </body>
