--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ h1 {
     color: black;
     font-size: 8vmin;
     /* font-family: sans-serif; */
-    text-align: center;
+    /* text-align: center; */
 }
 
  h2 {
@@ -54,14 +54,14 @@ h1 {
     /* font-size: 2vmin; */
     /* font-family: sans-serif; */
     background-color: lightgray;
-    text-align: center;
+    /* text-align: center; */
 } 
 
  h3 {
     font-size: 3vmin;
     /* font-family: sans-serif; */
     background-color: lightgray;
-    text-align: center;
+    /* text-align: center; */
 } 
 
  h4 {
@@ -69,7 +69,7 @@ h1 {
     font-size: 6vmin;
     /* font-family: sans-serif; */
     /* background-color: lightgray; */
-    text-align: center;
+    /* text-align: center; */
 } 
 
 
