--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -43,10 +43,10 @@
                             <form action="/songs/<%= s._id %>/comments?_method=DELETE" method="POST">
                                 <button type="submit">X</button>
                             </form>
-                            <form id="editComment" action="/songs/<%= s._id %>/comments?_method=PUT" method="POST">
-                                <textarea name="title" required><%= s.title %></textarea>
-                                    <button type="submit">edit</button>
-                                <% } %>
+                            <%= s._id%>
+                            <a href="/songs/<%= song._id %>/comments/<%= s._id %>/edit"><button> Edit</button></a> 
+                            
+                            <% } %>
                     </td>
                 </tr>
             <% }) %>
