--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
                 <a href="/auth/google" class="login">LOG IN&nbsp;<img src="<https://i.imgur.com/FHjYyi0.png>"></a>
                 <% } %>
             </div>
-            <div>
+            <div class="header-Title">
                 <h1>Songs project</h1>
             </div>
 </header>
