--- a/public/css/new.css
+++ b/public/css/new.css
@@ -1,3 +1,34 @@
-#new-song {
-
+.new-project-grid {
+    font-size: 3vmin;
+    font-weight: bold;
+    color: blue;
+    padding: 8vmin;
+    /* background-color: aqua; */
 }
+.new-project-grid input {
+    background-color: aqua;
+  }
+
+  .new-project-grid #new-genre-dropdown {
+    background-color: aqua;
+  }
+
+#add-song-button {
+    margin-top: 8vmin;
+    font-size: 2.5vmin;
+    border: 0.06vmin solid black;
+    border-radius: 3vmin;
+    padding: 1vmin;
+    color: black;
+}
+
+#add-song-button:hover {
+    background-color: black;
+    color: white;
+}
+
+#new-song {
+    border: 5px solid black;
+    padding: 1vmin;
+}
+
