wip:styled add song page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,6 @@
                 <% } %>
             </div>
             <div class="header-Title">
-                <h1>Songs project</h1>
+                <h1>The Best Songs and Comments Of All Times!</h1>
             </div>
 </header>
