--- a/public/css/new.css
+++ b/public/css/new.css
@@ -1,10 +1,55 @@
+.navigator{
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+.navigator a{
+      float: left;
+      color: white;
+      text-align: center;
+      padding-left: 8vmin;
+      padding-right: 10vmin;
+      padding-top: 2vmin;
+      padding-bottom: 2vmin;
+      text-decoration: none;
+      font-size: 20px;
+  }
+  
+.navigator a:hover {
+      background-color: #04AA6D;;
+      color:black;  
+  }
+
+body {
+    text-align: center;
+    padding-top: 1vmin;
+}
+
+h1 {
+    font-size: 6vmin;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    display: center; 
+    margin-top: 8vmin;
+}
+
+h2 {
+    font-size: 3vmin;
+    color: green;
+    font-family: 'Courier New', Courier, monospace;
+    display: center;
+    margin-top: 20vmin;
+    margin-bottom: 0.5vmin;
+}
+
 .new-project-grid {
     font-size: 3vmin;
     font-weight: bold;
     color: blue;
-    padding: 8vmin;
+    padding: 4vmin;
     /* background-color: aqua; */
 }
+
 .new-project-grid input {
     background-color: aqua;
   }
@@ -14,21 +59,21 @@
   }
 
 #add-song-button {
-    margin-top: 8vmin;
+    margin-top: 0.5vmin;
     font-size: 2.5vmin;
+    color: black;
     border: 0.06vmin solid black;
     border-radius: 3vmin;
     padding: 1vmin;
-    color: black;
+    background-color: blueviolet;
 }
 
 #add-song-button:hover {
-    background-color: black;
-    color: white;
+    background-color: aqua;
+    color: blue;
 }
 
 #new-song {
     border: 5px solid black;
     padding: 1vmin;
 }
-
