--- a/views/songs/new.ejs
+++ b/views/songs/new.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <%- include('../partials/head') %>
     <%- include('../partials/header') %>
-<h2>Project 2</h2>
+<h2>To add your favorite song to the list of best songs ever produced simply fill out the fields below.</h2>
     <div class="new-project-grid">
     <div class="new-song"></div>
     <form action = "/songs" method="POST">
@@ -25,6 +25,6 @@
     </form>
 </div>
 <body>
+    <div class="index-container"></div>
     <%- include('../partials/footer') %>
 </body>
-</html>
