--- a/views/songs/edit.ejs
+++ b/views/songs/edit.ejs
@@ -2,14 +2,12 @@
 <%- include('../partials/header') %>
 <main>
 
-    <% songs.comments.forEach(c => { %>
-            <form action="/songs/<%= c._id %>/comments?_method=PUT" method="POST">
-                <p><strong><%= c.title%></strong></p>
-                <%=c.user%>
-                <textarea name="title" required><%= c.title%></textarea>
+            <form action="/songs/<%= commentToEdit._id %>/comments?_method=PUT" method="POST">
+                <p><strong><%= commentToEdit.title%></strong></p>
+                <%=commentToEdit.user.name%>
+                <textarea name="title" required><%= commentToEdit.title%></textarea>
                 <button type="submit">edit</button>
             </form>
-    <%}); %> 
 </main>
 
 <%- include('../partials/footer') %>
