--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -3,6 +3,7 @@
     <%- include('../partials/head') %>
     <body>
         <%- include('../partials/header') %>
+
         <section>
             <table>
                 <thead>
@@ -36,14 +37,13 @@
                 <td class="comment-user"><img alt="avatar" src="<%= s.userAvatar %>" referrerpolicy="no-referrer"><%= s.userName %></td>
                 <tr>
                     <td><%= s.title %></td> 
-                    <td><%= s._id %></td> 
                     
                     <td>
                         <% if (user?._id.equals(s.user)) { %>
                             <form action="/songs/<%= s._id %>/comments?_method=DELETE" method="POST">
                                 <button type="submit">X</button>
                             </form>
-                            <a href="/songs/<%= song._id%>/comments/<%= s._id %>/edit"><button> Edit</button></a>                
+                            <a href="/comments/<%= s._id %>/edit"><button> Edit</button></a>                
                             <% } %>
                     </td>
                 </tr>
