--- a/views/songs/new.ejs
+++ b/views/songs/new.ejs
@@ -21,6 +21,9 @@
                 <option value= "rap">RAP</option>
             </select>
         </label>
+        <label> Song cover:
+            <input id="text" name="image" type="text"/>
+        </label>
         <button type="submit" id="add-song-button">Add Song</button>
     </form>
 </div>
