--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,7 +4,7 @@
 <body>
     <%- include('./partials/header') %>
     <img src = "https://picsum.photos/id/237/200/300" alt="a cute puppy">
-    <p>Try again later, <a href="/"> go back home</a></p>
+    <p>Try again later, <a href="/songs"> go back home</a></p>
     <%- include('./partials/footer') %>
 </body>
 </html>
