--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
             <a href="/songs/new"<%- title === 'Add Songs' ? 'class="active"' : ''%>>Add Songs</a>
             <a href="/logout">LOG OUT</a>
             <% } else { %>
-                <a href="/auth/google" class="login">LOG IN&nbsp;<img src="<https://i.imgur.com/FHjYyi0.png>"></a>
+                <a href="/auth/google" class="login">LOG IN&nbsp;</a>
                 <% } %>
             </div>
             <div class="header-Title">
