--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -5,17 +5,15 @@
         <%- include('../partials/header') %>
 
         <section>
-            <div class="show-table-wrapper">
             <table>
-                <thead class="show-header">
+                <thead>
                     <tr>
                         <th>Song</th>
                         <th>Artist</th>
                         <th>Genre</th>
                     </tr>
                 </thead>
-                    <tbody class="show-body"></tbody>
-
+                <tbody>
                     <tr>
                         <td><%= song.song %></td>
                         <td><%= song.artist %></td>
@@ -23,15 +21,14 @@
                     </tr>
                 </tbody>
             </table>
-            </div>
         </section>
         <section>
-            <h3 id="show-comments-heading">Leave a comment below</h3>
+            <h3>Comments</h3>
             <% if (user) { %>
             <form action="/songs/<%= song._id %>/comments" method="POST">
                 <label>
                     Comments:
-                    <textarea name="title" id="show-comment-box" cols="30" rows="10" required></textarea>
+                    <textarea name="title" cols="30" rows="10" required></textarea>
                 </label> 
                 <input type="submit" value="Add Comment">
             </form>
