--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,13 +3,19 @@
 @import url("show.css");
 
 body {
-    margin: 0;
-
+    background-color: rgb(63, 213, 158);
+    font-size: 2vmin;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin:auto;
 }
+
 .navigator{
   overflow: hidden;
   background-color: #333;
 }
+
 
 .navigator a{
     float: left;
@@ -31,15 +37,6 @@ body {
 #header-title {
     font-size: 5vmin;
     text-align: center;
-}
-
-body {
-    background-color: rgb(63, 213, 158);
-    font-size: 2vmin;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
 }
 
 .login {
@@ -86,7 +83,61 @@ body {
     animation-iteration-count: infinite linear;
     animation-timing-function: ease;
      /* linear | ease | ease-in | ease-out | ease-in-out */
+}
+
+/* CSS */
+.button-comment {
+    appearance: button;
+    background-color: #268d7a;
+    background-image: none;
+    border: 1px solid #000;
+    border-radius: 4px;
+    box-shadow: #fff 4px 4px 0 0,#45a866 4px 4px 0 1px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 0 5px 10px 0;
+    overflow: visible;
+    padding: 12px 40px;
+    text-align: center;
+    text-transform: none;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+    text-decoration: none;
   }
+  
+  .button-comment:focus {
+    text-decoration: none;
+  }
+  
+  .button-comment:hover {
+    text-decoration: none;
+  }
+  
+  .button-comment:active {
+    box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+    outline: 0;
+  }
+  
+  .button-comment:not([disabled]):active {
+    box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+    transform: translate(2px, 2px);
+  }
+  
+  @media (min-width: 768px) {
+    .button-comment {
+      padding: 12px 50px;
+    }
+  }
+
 
 #song-title{
     display: flex;
