--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -27,7 +27,7 @@
                                     <%= s.genre %>
                                 </td>
                                 <td>
-                                    <a id="button-comment" href = "/songs/<%= s._id %>"><button> Comment</button></a>
+                                    <a class="button-comment" href = "/songs/<%= s._id %>">Comment</a>
                                 </td>
                             </tr>
                             <% }); %>
