--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <%- include('./partials/head') %>
     <%- include('./partials/header') %>
-<h4>Project 2</h4>
+<h4 id="proj-title">Project 2</h4>
     <%- include('./partials/footer') %>
 </body>
 </html>
