--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,8 @@
+
 .index-container {
     margin-top: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
