--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,5 +1,3 @@
-
-
 .show-table-wrapper {
     display: grid;
     grid-template-columns: 1fr;
@@ -26,10 +24,11 @@
     grid-area: body;
 }
 
-table {
+.music-info {
     width: 100%;
-    table-layout: fixed;
+    table-layout: auto;
 }
+
 .show-header th, 
 .show-body td {
     padding: 10px;
@@ -62,6 +61,10 @@ table {
     margin-top: 10px;
 }
 
+.song-image{
+    width: 20vw;
+    height: 20vw; 
+}
 #show-comment-box textarea {
     border-radius: 50px;
     border: none;
