--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('../partials/head') %>
-    <body>
+    <body id="body-box">
         <%- include('../partials/header') %>
             <div class="index-container">
                     <table>
